--- a/loki-parser/values.yaml
+++ b/loki-parser/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: ghcr.io/jakubzolkos/loki-parser
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.1.0"
+  tag: "2.0.0"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -75,10 +75,6 @@ nodeSelector: {}
 tolerations: []
 affinity: {}
 
-# CONFIGURE THIS
 logParser:
-  namespace: ""
-  lokiHost: ""
-  lokiPort: 80
-  redisHost: ""
-  redisPort: 6379
+  namespace: default
+
