--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 async-timeout==4.0.3
 bcrypt==4.0.1
+blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 colorlog==6.7.0
 cryptography==41.0.5
+Flask==3.0.0
 google-auth==2.23.4
 idna==3.4
+itsdangerous==2.1.2
 Jinja2==3.1.2
 kubernetes==28.1.0
 MarkupSafe==2.1.3
@@ -35,5 +39,7 @@ rsa==4.9
 six==1.16.0
 text-unidecode==1.3
 urllib3==1.26.18
+waitress==2.1.2
 websocket-client==1.6.4
+Werkzeug==3.0.1
 xmltodict==0.13.0
